@@ -4,7 +4,8 @@ Upcoming version for TYPO3 13
 [TASK]    Update requirements for TYPO3 13
 [TASK]    Migrate plugin registration
 [TASK]    Remove obsolete ext_tables.php
-[TASK]    Migrate registration of status dashboard widget
+[TASK]    Migrate registration of status dashboard widget, https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/12.0/Breaking-96812-NoFrontendTypoScriptBasedTemplateOverridesInTheBackend.html#widget-registration-using-services-yaml
+[TASK]    Don't use QueryBuilder->add() anymore because it has been removed, https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/13.0/Breaking-102875-QueryBuilderChanges.html
 
 Upcoming version
 [BUGFIX]  Use correct table names for query builder or connection. Thanks to Andreas Kießling. https://github.com/tpwd/ke_search/issues/228
